# SwarmCoordinator

./: README.md
SwarmCoordinator/: SwarmCoordinator.sln
SwarmCoordinator/SwarmCoordinator/: Calculation.cpp  Calculation.h  ControllerNode.cpp  ControllerNode.h  FollowerNode.cpp  FollowerNode.h  Main.cpp  Movement.cpp  Movement.h  SwarmCoordinator.vcxproj  SwarmCoordinator.vcxproj.filters
mmapGPIO/: CMakeLists.txt  Main.cpp
swarm_master/devel/: .catkin  .rosinstall  setup.sh
swarm_master/src/: CMakeLists.txt  Calculation.cpp  Communication.cpp  Communication.h  ControllerNode.cpp  DecisionHandler.cpp  DecisionHandler.h  FollowerNode.h  Main.cpp  Movement.cpp  Movement.h  Node.cpp  Node.h  NodeHandler.cpp  NodeHandler.h  Parse.cpp  Parse.h  Read.cpp  Read.h  Threading.cpp  Threading.h  Write.cpp  Write.h
swarm_node/src/: CMakeLists.txt  Calculation.cpp  Calculation.h  Communication.cpp  Communication.h  DecisionHandler.cpp  DecisionHandler.h  Hardware.cpp  Hardware.h  Main.cpp  Node.cpp  Node.h  Parse.cpp  Parse.h  Read.cpp  Read.h  Stepper.cpp  Threading.cpp  Threading.h  Write.cpp
swarm_node_simple/src/: CMakeLists.txt  Calculation.cpp  Calculation.h  Hardware.cpp  Hardware.h  Main.cpp  Node.cpp  Node.h
swarm_test1/src/: CMakeLists.txt  Main.cpp  NodeHandler.cpp  NodeHandler.h  Read.cpp  Read.h  Write.cpp  Write.h
swarm_test2/src/: CMakeLists.txt  Main.cpp  Read.cpp  Read.h
